--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Consensus</title>
-    <link rel="stylesheets" href="style.css">
-  </head>
-  <body>
-    <a href="chartresult.html">Start the Quiz</a>
-  </body>
-</html>
+<meta charset="utf-8">
+<style>
+h1
+{
+  text-align: center;
+  color: white;
+}
+
+h2
+{
+  text-align: center;
+  color: white;
+}
+
+h3
+{
+  text-align: center;
+  color: white;
+}
+
+</style>
+<svg class="chart"></svg>
+<script src="d3.js"></script>
+<body bgcolor="#000000"> 
+<h1>Con-Census</h1>
+<h2>Find out how much you know</h2>
+<h2>Compete with people around the country</h2>
+<h3>Click here to begin </h3>
+<div style="text-align: center;">
+<a onclick="window.open(this.href,this.target);return false;" href="question.html" target="question"><img border="0" src="start.png" alt=""></a>
+</div>
+
+
+<script>
+
+
+</script>
+
