--- a/public/introscreen.html
+++ b/public/introscreen.html
@@ -3,20 +3,20 @@
 <style>
 h1
 {
-  text-align: center;
-  color: white;
+	text-align: center;
+	color: white;
 }
 
 h2
 {
-  text-align: center;
-  color: white;
+	text-align: center;
+	color: white;
 }
 
 h3
 {
-  text-align: center;
-  color: white;
+	text-align: center;
+	color: white;
 }
 
 </style>
@@ -28,12 +28,7 @@ h3
 <h2>Compete with people around the country</h2>
 <h3>Click here to begin </h3>
 <div style="text-align: center;">
-<a href="question.html"><img border="0" src="start.png" alt=""></a>
+<a onclick="window.open(this.href,this.target);return false;" href="question.html" target="question"><img border="0" src="start.png" alt=""></a>
 </div>
 
-
-<script>
-
-
-</script>
 
